# TorchFlat

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_cuda.bat  setup_rocm.sh
.github/workflows/: ci.yml
benchmarks/: bench_all_methods.py  bench_real_tess.py  bench_vs_wotan.py  bootstrap_ci.py  compare_methods.py  deep_profile.py  injection_comparison.py  injection_grid.py  injection_grid_umi.py  profile_pipeline.py  rerun_planets.py  test_breakdown.py  test_mean_numba.py  test_methods.py  test_systematic.py  timing_report.py  validate_asymmetry.py  validate_kepler_quarters.py  validate_known_planets.py  validate_large_sample.py  validate_multisector.py
doc/: ALGORITHM.md  API.md  QUICKSTART.md
figures/: generate_figures.py
results/: README.md  asymmetry_10k_stars.json  asymmetry_validation.json  asymmetry_validation_2k.json  breakdown_point.json  gpu_tools_comparison.md  injection_grid.json  injection_grid_umi.json  kepler_asymmetry_sweep.md  kepler_multi_quarter.json  known_planet_recovery.json  known_planet_recovery_4methods.json  known_planet_recovery_all.json  known_planet_summary.md  method_comparison.md  method_comparison_1k.json  multi_mission.json  multisector_validation.json  multisector_validation_2k.json  speedup_comparison.md  systematic_analysis.json  theoretical_analysis.md
tests/: conftest.py  test_batching.py  test_biweight.py  test_clipping.py  test_degenerate.py  test_determinism.py  test_gaps.py  test_highpass.py  test_injection.py  test_kernel.py  test_normalize.py  test_pipeline.py  test_quality.py  test_umi.py  test_utils.py  test_windows.py
torchflat/: __init__.py  _kernel_loader.py  _utils.py  batching.py  biweight.py  biweight_cpu.py  cli.py  clipping.py  gaps.py  highpass.py  normalize.py  pipeline.py  quality.py  umi.py  windows.py
torchflat/csrc/: masked_median_kernel.hip  masked_median_kernel_hip.cpp  umi_ext.cpp  umi_kernel.cu
