[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchflat"
version = "0.5.0"
description = "GPU-native photometric preprocessing pipeline for exoplanet transit searches"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Omar Khan"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["astronomy", "exoplanets", "transits", "TESS", "GPU", "PyTorch", "detrending"]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "numba>=0.57.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/omarkhan2217/TorchFlat"
Repository = "https://github.com/omarkhan2217/TorchFlat"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-benchmark",
    "wotan",
    "scipy",
]
dev = [
    "torchflat[test]",
]
