[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchflat"
version = "0.9.22"
description = "GPU-accelerated photometric preprocessing with UMI detrending for exoplanet transit searches"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Omar Khan"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["astronomy", "exoplanets", "transits", "TESS", "GPU", "PyTorch", "detrending", "UMI"]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.scripts]
torchflat = "torchflat.cli:main"

[project.urls]
Homepage = "https://github.com/omarkhan2217/TorchFlat"
Repository = "https://github.com/omarkhan2217/TorchFlat"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-benchmark",
    "wotan",
]
dev = [
    "torchflat[test]",
    "astropy",
]

[tool.setuptools.packages.find]
include = ["torchflat*"]

[tool.setuptools.package-data]
torchflat = ["csrc/*.cu", "csrc/*.cpp", "csrc/build/*.cpp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
